# adventofcode

./: .gitignore  .gitmodules  Cargo.toml  README.md
2020/assignment/: 10.html  11.html  12.html  13.html  14.html  18.html  2.html  25.html  5.html  6.html  7.html  8.html  9.html
2020/performance/: day10a.txt  day10b.txt  day11a.txt  day11b.txt  day12a.txt  day12b.txt  day13a.txt  day1a.txt  day1b.txt  day2a.txt  day2b.txt  day3a.txt  day3b.txt  day4a.txt  day4b.txt  day5a.txt  day5b.txt  day6a.txt  day6b.txt  day7a.txt  day7b.txt  day8a.txt  day8b.txt  day9a.txt  day9b.txt
2020/src/: day01-01.js  day01-02.js  day02-01.js  day02-02.js  day04-01.js
2021/: Cargo.toml
2021/assignment/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
2021/performance/: day10a.txt  day10b.txt  day11a.txt  day11b.txt  day13a.txt  day13b.txt  day14a.txt  day1a.txt  day1b.txt  day21a.txt  day2a.txt  day2b.txt  day3a.txt  day3b.txt  day4a.txt  day4b.txt  day5a.txt  day5b.txt  day6a.txt  day6b.txt  day7a.txt  day7b.txt  day8a.txt  day8b.txt  day9a.txt
2021/src/: util.rs
2022/: Cargo.toml
2022/assignment/: 1.html  10.html  11.html  12.html  13.html  14.html  19.html  2.html  20.html  21.html  3.html  4.html  5.html  (+4 more)
2023/: Cargo.toml
2024/: Cargo.toml
2025/: Cargo.toml
benchtest/: Cargo.toml
download-assignment-and-data/: Cargo.toml
downloader/: Cargo.toml
downloader/src/: cli.rs  download.rs  http.rs  main.rs
(+28 files in other folders)
