[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
chrono = "0.4.23"
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0.66"
scraper = "0.13.0"